# python_projects

AI/: tech_stack.md
Quantconnect_scripts/New_Misc/: MACD.py  SimpleOptions.py
RAG_basic/app/: main.py
RAG_knowledge_base/: readme.md
base_starter_fastapi/: .env.example
base_starter_fastapi/app/: main.py
fastapi/fullstack_langgraph/: pyproject.toml
fastapi/fullstack_langgraph/alembic/versions/: 721194a58f66_add_conversations_and_messages_tables.py
fastapi/fullstack_langgraph/app/: main.py
fastapi/fullstack_langgraph/app/RAG/: schemas.py  services.py  utils.py
fastapi/fullstack_langgraph/app/chat_langgraph/: repository.py  router.py  services.py
fastapi/fullstack_langgraph/app/globals/: dependencies.py
fastapi/fullstack_langgraph/app/todo/: router.py  services.py
fastapi/rag_basic/: LICENSE
fastapi_adv/: .gitignore  README.md  pyproject.toml
fastapi_adv/app/: main.py
fastapi_adv/app/fileUpload/: router.py
fastapi_adv/frontend/src/: App.tsx
fastapi_adv/frontend/src/pages/: LLamaChat.tsx  Upload.tsx
fastapi_base_starter/: pyproject.toml
fullstack_langgraph_fastapi/: .gitignore  README.md
fullstack_langgraph_fastapi/frontend/: package-lock.json  package.json
fullstack_langgraph_v1/: .env.example
fullstack_langgraph_v1/alembic/: env.py
gen_ai/RAG_basic/: pyproject.toml
gen_ai/RAG_basic/app/chat/: graph.py
notes/: fastapi.md  notes.md  python.md
python_dsa/: MergeTwoArrays.py  README.md
python_dsa/OOP/: LRUcache.py  OOP_Python.py  fileSystemOOP.py  filesystemDict.py  test.py
python_dsa/arrays/: BestTImeToBuyStock.py  ContainsDuplicates.py  GreatestRightEle.py  IntersectionOfTwoArraysII.py  MergeTwoArrays.py  MinValuePositive.py  MoveZeroes.py  ProdArraySelf.py  num_of_islands.py
python_dsa/built_in_funcs/: ArrayFuncs.py  DictFuncs.py  StringFuncs.py
python_dsa/dynamic_programming/: ClimbingStairs.py  HouseRobber.py
python_dsa/hash_table/: AnagramsI.py  NonRepeatingChar.py  TwoSum.py
python_dsa/other/: TopKFrequent.py
(+89 files in other folders)
