[project]
name = "fastapi-uv"
version = "0.1.0"
description = "A minimal RAG application using LangGraph and open-source libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    # RAG dependencies (all open-source)
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
